# cookie-cutter-django-api

./: .gitignore  cookiecutter.json  readme.md
{{cookiecutter.project_slug}}/: .env  Dockerfile  Taskfile.yml  docker-compose.yaml  manage.py  pyproject.toml  readme.md  requirements.txt
{{cookiecutter.project_slug}}/accounts/: admin.py  forms.py  models.py  serializers.py
{{cookiecutter.project_slug}}/accounts/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/api/: router.py  urls.py
{{cookiecutter.project_slug}}/example/: urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
