[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["Moshe Dicker <dickermoshe@gmail.com>"]
readme = "README.md"
packages = [{ include = "{{cookiecutter.project_slug}}" }]


[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.0.0"
Django = "^4.2.3"
django-extensions = "^3.2.1"
django-cors-headers = "^4.1.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.3"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
gevent = "^23.9.1"
gtts = "^2.3.2"
django-storages = {extras = ["s3"], version = "^1.14.2"}
redis = "^5.0.1"
hiredis = "^2.2.3"


[tool.poetry.group.dev.dependencies]
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.0" }
djangorestframework-stubs = { extras = [
    "compatible-mypy",
], version = "^3.14.0" }
ptpython = "^3.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main", 'mypy_drf_plugin.main']
